fix: heavier font-weight and darker color for readability

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,8 +100,8 @@ input, select, textarea {
 	body, input, textarea, select {
 		font-family: 'Open Sans', sans-serif;
 		line-height: 1.85em;
-		color: #888;
-		font-weight: 300;
+		color: #5e5e5e;
+		font-weight: 400;
 		font-size: 13pt;
 	}
 
